fix: layout issues in login template

--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,4 +1,6 @@
-
+.container {
+    margin-bottom: 105px;
+}
 
 .card-body {
     background-color: #011E2D;
